clang/test/BSC/Negative/Ownership/Owned/owned_impCast/owned_impCast.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

#define NULL ((void*) 0)

//_Owned to _Owned
void test1(float f) {
    float* _Owned a1 = (float* _Owned)&f;
    int* _Owned a2 = a1;    //expected-error {{incompatible _Owned types, cannot cast 'float *_Owned' to 'int *_Owned'}}
}

//unOwned to _Owned
void test2(int* b1) {
    int* _Owned b2 = b1;  //expected-error {{incompatible _Owned types, cannot cast 'int *' to 'int *_Owned'}}
}

//_Owned to unOwned
void test3(int* _Owned c1) {
    int* c2 = c1;  //expected-error {{incompatible _Owned types, cannot cast 'int *_Owned' to 'int *'}}
}

//unOwned to _Owned with typedef
typedef int* _Owned myInt;
void test4() {
    int b = 10;
    int* p1 = &b;
    myInt p2 = p1;  //expected-error {{incompatible _Owned types, cannot cast 'int *' to 'myInt' (aka 'int *_Owned'}}
}

int* _Owned test5(int* _Owned a){
    return a;
}

int test5_1(int* _Owned a) {
    int* _Owned b;
    b = test5(a);
    if (b != 0) {
        return 1;
    }
    return 0;
}

int* test6()
{
    int b = 0;
    int* a = &b;
    return a;
}

int test6_1()
{
    int* a = test6();
    int* _Owned b = (int* _Owned)a;
    if (*b != 0) {
        return 1;
    }
    return 0;
}

// short to int
int test7()
{
    short a = 0;
    _Owned short *b = &a;    // expected-error {{type of 'short' cannot be qualified by '_Owned'}} //expected-error {{incompatible _Owned types, cannot cast 'short *' to '_Owned short *'}}
    _Owned int **c = (_Owned int**)&b; // expected-error {{type of 'int' cannot be qualified by '_Owned'}} // expected-error {{incompatible _Owned types, cannot cast '_Owned short **' to '_Owned int **'}}
    if(**c != 0) {
        return 1;
    }
    return 0;
}

// with other qualifiers
void test9() {
    int a = 10;
    int* const _Owned p1 = (int* _Owned)&a;   //legal
    int* const _Owned p2 = p1;   //legal
    const int* _Owned p3 = p1;   //legal
    const int* const _Owned p4 = p1; //legal
    volatile int* _Owned p5 = p1;
}

// pointer to _Owned type, recursively check
void test10(_Owned int* p0) {// expected-error {{type of 'int' cannot be qualified by '_Owned'}} 
    int* p1 = p0;   //expected-error {{incompatible _Owned types, cannot cast '_Owned int *' to 'int *'}}
}

void test11(int* _Owned *p0) {
    int** p1 = p0;  //expected-error {{incompatible _Owned types, cannot cast 'int *_Owned *' to 'int **'}}
}

typedef int* _Owned * myIntPP;
void test12(int* _Owned *p0, int** p1) {
    myIntPP p2 = p0;
    myIntPP p3 = p1;    //expected-error {{incompatible _Owned types, cannot cast 'int **' to 'myIntPP' (aka 'int *_Owned *'}}
}

void test13(int* _Owned p0, const int* _Owned p1) {
    float* _Owned p2 = p0;   //expected-error {{incompatible _Owned types, cannot cast 'int *_Owned' to 'float *_Owned'}}
    const float* _Owned p3 = p1; //expected-error {{incompatible _Owned types, cannot cast 'const int *_Owned' to 'const float *_Owned'}}
    int* _Owned p4 = p1; //expected-warning {{initializing 'int *_Owned' with an expression of type 'const int *_Owned' discards qualifiers}}
}

_Owned struct S {
_Public:
    ~S(S this) {}
};

void test14() {
    S* s = NULL;
}

_Owned struct R<T> {
_Public:
    T* ptr;
    ~R(R<T> this) {}
};

void test15() {
    R<int> ri = { .ptr = NULL };
    R<S> rs = { .ptr = NULL };
}